# haskelldb

./: .gitattributes  .gitignore  ANNOUNCE  AUTHORS  BUGS  ChangeLog  FIXED  HaskellDB-HCar.tex  HaskellDB-JH.tex  INSTALL  LICENSE  Makefile  Makefile.ghc  Makefile.hugs  NEWS  README  TODO  UPGRADE  aclocal.m4  common.mk  config.mk  config.mk.in  config.sub  configure.ac  haskelldb.cabal  haskelldb.pkg.in  preprocess  rules.mk  set-version  shell.nix  test.nix  unregister-all
driver-dynamic/: DBDirect.hs  haskelldb-dynamic.cabal
driver-dynamic/Database/HaskellDB/: DynConnect.hs
driver-flat/: DBDirect.hs  haskelldb-flat.cabal
driver-flat/Database/HaskellDB/: FlatDB.hs
driver-flat/tools/: flatdb-create.hs
driver-hdbc/: haskelldb-hdbc.cabal
driver-hdbc-odbc/: DBDirect.hs  LICENSE  haskelldb-hdbc-odbc.cabal
driver-hdbc-odbc/Database/HaskellDB/HDBC/: ODBC.hs
driver-hdbc-postgresql/: DBDirect.hs  haskelldb-hdbc-postgresql.cabal
driver-hdbc-postgresql/Database/HaskellDB/HDBC/: PostgreSQL.hs
driver-hdbc-sqlite3/: DBDirect.hs  haskelldb-hdbc-sqlite3.cabal
driver-hdbc-sqlite3/Database/HaskellDB/HDBC/: SQLite3.hs
driver-hdbc/Database/HaskellDB/: HDBC.hs
driver-hsql/: haskelldb-hsql.cabal
driver-hsql-mysql/: DBDirect.hs  haskelldb-hsql-mysql.cabal
driver-hsql-mysql/Database/HaskellDB/HSQL/: MySQL.hs
driver-hsql-odbc/: DBDirect.hs  haskelldb-hsql-odbc.cabal
driver-hsql-odbc/Database/HaskellDB/HSQL/: ODBC.hs
driver-hsql-oracle/: DBDirect.hs  haskelldb-hsql-oracle.cabal
driver-hsql-oracle/Database/HaskellDB/HSQL/: Oracle.hs
driver-hsql-postgresql/: DBDirect.hs  haskelldb-hsql-postgresql.cabal
driver-hsql-postgresql/Database/HaskellDB/HSQL/: PostgreSQL.hs
driver-hsql-sqlite/: DBDirect.hs  haskelldb-hsql-sqlite.cabal
driver-hsql-sqlite/Database/HaskellDB/HSQL/: SQLite.hs
driver-hsql-sqlite3/: DBDirect.hs  haskelldb-hsql-sqlite3.cabal
driver-hsql-sqlite3/Database/HaskellDB/HSQL/: SQLite3.hs
driver-hsql/Database/HaskellDB/: HSQL.hs
driver-wx/: haskelldb-wx.cabal
driver-wx/Database/HaskellDB/: WX.hs
examples/: .ghci  Select.hs
examples/DB1/: Bool_tbl.hs  Calendartime_tbl.hs  Double_tbl.hs  Hdb_t1.hs  Hdb_t2.hs  Int_tbl.hs  Integer_tbl.hs  String_tbl.hs
src/: Ado.hs  Bounded.txt  DBDirect.hs  FieldType.pphs  HDBRecUtils.hs  Makefile  Makefile.ghc  Makefile.hugs  PPrint.hs  common.mk  config.mk  rules.mk
src/Database/: HaskellDB.hs
src/Database/HaskellDB/: BoundedList.hs  BoundedString.hs  DBDirect.hs  DBLayout.hs  DBSpec.hs  Database.hs  DriverAPI.hs  DynConnect.hs  FieldType.hs  GenericConnect.pphs  HDBRec.hs  Optimize.hs  PrimQuery.hs  PrintQuery.hs  Query.hs  Sql.hs  Version.hs  WX.hs
src/Database/HaskellDB/DBSpec/: DBInfo.hs  DBSpec.hs  DBSpecToDBDirect.hs  DBSpecToDatabase.hs  DatabaseToDBSpec.hs  Makefile  PPHelpers.hs  SpecTest.hs
src/Database/HaskellDB/HDBC/: Common.hs  ODBC.hs  PostgreSQL.hs  SQLite3.hs
src/Database/HaskellDB/HSQL/: Common.hs  Common.pphs  HSQL-desc.patch  HSQL-hugs.patch  HSQL-hwt.patch  HSQL.hsc.diff  HSQL_MySQL.hs  HSQL_ODBC.hs  HSQL_PostgreSQL.hs  HSQL_driver.hs  Makefile  Makefile.HSQL  MySQL.hs  ODBC.hs  PostgreSQL.hs  SQLite.hs  SQLite3.hs  build-hsql  hsql-hugs-problems.txt  test.hs
src/Database/HaskellDB/Sql/: Default.hs  Generate.hs  MySQL.hs  PostgreSQL.hs  Print.hs  SQLite.hs
test/: .ghci  CustomSql.hs  DBTest.hs  DescDB1.hs  Makefile  README  RunTests.hs  THField.hs  TestCases.hs  TestConnect.hs  TestConnect.pphs  big-test-create-tables.hs  big-test.hs  current-time.hs  date-types.hs  dbspec.hs  default-auto-inc.hs  hardcoded-layout-simple-query.hs  higher-order.hs  html-users-list.hs  insert-update-delete.hs  join-and-aggr.hs  join-without-restrict.hs  lazy.hs  max-row.hs  null-and-case.hs  quickcheck.hs  run-all-tests  run-big-test  same-name.hs  test-bounded.hs  test-flat.hs  test-hdbc-postgresql.hs  test-hdbc-sqlite3.hs  test-hsql-mysql.hs  test-hsql-postgresql.hs  test-hsql-sqlite.hs  test-hsql-sqlite3.hs  test-sum.hs  test.config  (+3 more)
test/old/: custom-test.hs  dbspec.hs  hardcoded-layout-simple-query.hs  insert-update-delete.hs  join-and-aggr.hs  test-non-ascii.hs  transaction.hs
