Name: haskelldb
Version: 2.1.0
Cabal-version: >= 1.6
Build-type: Simple
Homepage: http://trac.haskell.org/haskelldb
Copyright: The authors
Maintainer: "Justin Bailey" <jgbailey@gmail.com>
Author: Daan Leijen, Conny Andersson, Martin Andersson, Mary Bergman, Victor Blomqvist, Bjorn Bringert, Anders Hockersten, Torbjorn Martin, Jeremy Shaw, Justin Bailey
License: BSD3
License-file: LICENSE
Synopsis: A library of combinators for generating and executing SQL statements.
Description: This library allows you to build SQL SELECT, INSERT, UPDATE, and DELETE 
             statements using operations based on the relational algebra. 
Category: Database

Library
  Build-depends: mtl >= 1.1 && < 2.1, 
                 base >= 3 && < 5, 
                 pretty >= 1 && < 2, 
                 old-time >= 1 && < 2, 
                 old-locale >= 1 && < 2, 
                 directory >= 1 && < 2,
                 containers >= 0.3 && < 1
  Extensions:
    EmptyDataDecls,
    DeriveDataTypeable,
    ExistentialQuantification,
    OverlappingInstances,
    UndecidableInstances,
    MultiParamTypeClasses,
    FunctionalDependencies,
    TypeSynonymInstances,
    FlexibleInstances,
    FlexibleContexts,
    PolymorphicComponents
  Exposed-Modules:
    Database.HaskellDB,
    Database.HaskellDB.BoundedList,
    Database.HaskellDB.BoundedString,
    Database.HaskellDB.DBLayout,
    Database.HaskellDB.DBDirect,
    Database.HaskellDB.DBSpec,
    Database.HaskellDB.DBSpec.DBInfo,
    Database.HaskellDB.DBSpec.DBSpecToDBDirect,
    Database.HaskellDB.DBSpec.DBSpecToDatabase,
    Database.HaskellDB.DBSpec.DatabaseToDBSpec,
    Database.HaskellDB.DBSpec.PPHelpers,
    Database.HaskellDB.Database,
    Database.HaskellDB.FieldType,
    Database.HaskellDB.Optimize,
    Database.HaskellDB.PrimQuery,
    Database.HaskellDB.PrintQuery,
    Database.HaskellDB.Query,
    Database.HaskellDB.HDBRec,
    Database.HaskellDB.Sql,
    Database.HaskellDB.Sql.Generate,
    Database.HaskellDB.Sql.Default,
    Database.HaskellDB.Sql.Print,
    Database.HaskellDB.Sql.MySQL,
    Database.HaskellDB.Sql.PostgreSQL,
    Database.HaskellDB.Sql.SQLite,
    Database.HaskellDB.Version,
    Database.HaskellDB.DriverAPI
  Hs-source-dirs: src
  ghc-options: -O2

Source-repository head
  Type:       darcs
  Location:   http://code.haskell.org/haskelldb
