Name: haskelldb
Version: 2.2.4
Cabal-version: >= 1.6
Build-type: Simple
Homepage: https://github.com/m4dc4p/haskelldb
Copyright: The authors
Maintainer: "Justin Bailey" <jgbailey@gmail.com>
Author: Daan Leijen, Conny Andersson, Martin Andersson, Mary Bergman, Victor Blomqvist, Bjorn Bringert, Anders Hockersten, Torbjorn Martin, Jeremy Shaw, Justin Bailey
License: BSD3
License-file: LICENSE
Synopsis: A library of combinators for generating and executing SQL statements.
Description: This library allows you to build SQL SELECT, INSERT, UPDATE, and DELETE 
             statements using operations based on the relational algebra. 
Category: Database

Library
  Build-depends: mtl >= 1.1 && < 3, 
                 base >= 3 && < 5, 
                 pretty >= 1 && < 2, 
                 old-time >= 1 && < 2, 
                 old-locale >= 1 && < 2, 
                 directory >= 1 && < 2,
                 containers >= 0.3 && < 1,
                 time >= 1.0
  Extensions:
    EmptyDataDecls,
    DeriveDataTypeable,
    ExistentialQuantification,
    OverlappingInstances,
    UndecidableInstances,
    MultiParamTypeClasses,
    FunctionalDependencies,
    TypeSynonymInstances,
    FlexibleInstances,
    FlexibleContexts,
    PolymorphicComponents
  Exposed-Modules:
    Database.HaskellDB.PrimQuery,
    Database.HaskellDB.HDBRec,
    Database.HaskellDB.Version
  Hs-source-dirs: src

Source-repository head
  Type:       git
  Location:   https://github.com/m4dc4p/haskelldb
