Name: haskelldb-dynamic
Version: 0.9
Copyright: The authors
Maintainer: haskelldb-users@lists.sourceforge.net
Author: Daan Leijen, Conny Andersson, Martin Andersson, Mary Bergman, Victor Blomqvist, Bjorn Bringert, Anders Hockersten, Torbjorn Martin, Jeremy Shaw
License: BSD3
build-depends: haskell98, base, haskelldb, plugins
Extensions: ExistentialQuantification,
            OverlappingInstances,
            UndecidableInstances,
            MultiParamTypeClasses
Synopsis: HaskellDB support for the dynamically loaded drivers.
Exposed-Modules:
        Database.HaskellDB.DynConnect
hs-source-dir: ../src
ghc-options: -O2
