Name: haskelldb-dynamic
Version: 1.0.0
Cabal-version: >= 1.6
Homepage: https://github.com/m4dc4p/haskelldb
Build-type: Simple
Copyright: The authors
Maintainer: haskelldb-users@lists.sourceforge.net
Author: Daan Leijen, Conny Andersson, Martin Andersson, Mary Bergman, Victor Blomqvist, Bjorn Bringert, Anders Hockersten, Torbjorn Martin, Jeremy Shaw
License: BSD3
License-file: LICENSE
Synopsis: HaskellDB support for the dynamically loaded drivers.
Category: Database

Library
  Build-depends: haskell98, mtl, haskelldb, plugins, base >= 3 && < 5 
  Extensions: ExistentialQuantification,
              OverlappingInstances,
              UndecidableInstances,
              MultiParamTypeClasses
  Exposed-Modules:
          Database.HaskellDB.DynConnect

Executable DBDirect-dynamic
  Main-is: DBDirect.hs
  Build-depends: haskelldb==0.11

Source-repository head
  Type:       git
  Location:   https://github.com/m4dc4p/haskelldb
