Name: haskelldb-flat
Version: 1.0
Cabal-version: >= 1.2
Build-type: Simple
Copyright: Bjorn Bringert
Maintainer: bjorn@bringert.net
Author: Bjorn Bringert
License: BSD3
Synopsis: An experimental HaskellDB back-end in pure Haskell (no SQL)
Description:
  This is a very experimental HaskellDB back-end which is written in pure Haskell
  and doesn't use SQL. It stores the database in a file. Using this with
  concurrent writes leads to data loss. This back-end does not support transactions.

Flag split-base

Library
  Build-depends: mtl, haskelldb >= 1 && < 2
  if flag(split-base)
    Build-depends: base >= 3 && < 5, containers, old-time >= 1 && < 2, directory >= 1 && < 2
  else
    Build-depends: base < 3.0
  Exposed-Modules: Database.HaskellDB.FlatDB

Executable DBDirect-flat
  Main-is: DBDirect.hs

--Executable:  flatdb-create
--Main-Is:     tools/flatdb-create.hs
--ghc-options: -O2 -Wall
